# job-market-intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pipeline.yml
.streamlit/: config.toml
app/: pyproject.toml
app/streamlit_app/: Home.py  __init__.py  agent.py  cv_match.py  db.py  ui.py
app/streamlit_app/pages/: 1_Job_Explorer.py  1_Visa_Sponsorship.py  2_Market_Trends.py  3_Ask_the_Data.py  3_NL_Visa_Audit.py  4_Ask_the_Data.py  5_How_It_Works.py  6_CV_Match.py
app/tests/: test_agent.py  test_cv_match.py
dbt/jmi/: dbt_project.yml  profiles.yml
dbt/jmi/macros/: generate_schema_name.sql  jmi_canonical_key.sql  jmi_normalize_company.sql
dbt/jmi/models/marts/: DT_COMPANY.sql  DT_DATE.sql  DT_SOURCE.sql  FT_JOB_POSTING.sql  FT_JOB_SNAPSHOT_DAILY.sql  _marts.yml
dbt/jmi/models/staging/: _sources.yml  _staging.yml  stg_job_enrichment.sql  stg_job_postings.sql  stg_recognised_sponsors.sql
dbt/jmi/seeds/: recognised_sponsors.csv
docs/: architecture.md
docs/adr/: 0001-canonical-schema-separation.md  0002-cross-source-dedup-in-dbt.md  0003-visa-enum-classification.md  0004-warehouse-motherduck-medallion.md  0005-zero-cost-stack.md
enrichment/: pyproject.toml
enrichment/jmi_enrichment/: __init__.py  classifier.py  dedup.py  models.py  prompts.py  providers.py  salary.py
enrichment/tests/: test_classifier.py  test_dedup.py  test_providers.py  test_salary.py
infra/: README.md  docker-compose.yml
infra/docker/: app.Dockerfile  worker.Dockerfile
libs/jmi_core/: pyproject.toml
libs/jmi_core/jmi_core/: __init__.py  logging.py  settings.py  text.py  warehouse.py
libs/jmi_core/jmi_core/schema/: __init__.py  enrichment.py  enums.py  raw.py  values.py
libs/jmi_core/tests/: test_schema.py  test_warehouse.py
orchestration/: prefect.yaml  pyproject.toml
orchestration/jmi_flows/: __init__.py  enrich.py  ingest.py  pipeline.py  warehouse_init.py
orchestration/tests/: test_pipeline.py
scrapers/: pyproject.toml
scrapers/jmi_scrapers/: __init__.py  base.py  free_apis.py  honeypot.py  ind_sponsors.py  jsonld.py  registry.py
scrapers/tests/: test_free_apis.py  test_honeypot.py  test_jsonld.py
warehouse/ddl/: 00_schemas.sql
warehouse/ddl/raw/: 10_raw_job_postings.sql  20_raw_job_enrichment.sql
