[project]
name = "job-market-intelligence"
version = "0.1.0"
description = "Job Market Intelligence Engine — end-to-end DE/AE/LLM portfolio + relocation tool"
requires-python = ">=3.11"
# The root is a thin meta-package; real code lives in the workspace members below.
# Streamlit Community Cloud resolves dependencies with uv (uv.lock outranks
# requirements.txt in its precedence order), and it installs *this* root project
# — so every member the deployed app imports must be listed here, jmi-app included.
dependencies = [
    "jmi-core",
    "jmi-scrapers",
    "jmi-enrichment",
    "jmi-flows",
    "jmi-app",
]

[dependency-groups]
# `uv sync` installs these by default for local development.
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    # dbt + the DuckDB/MotherDuck adapter (shares the same duckdb as the app).
    "dbt-duckdb>=1.9",
]

[tool.uv.workspace]
members = ["libs/*", "scrapers", "enrichment", "orchestration", "app"]

[tool.uv.sources]
jmi-core = { workspace = true }
jmi-scrapers = { workspace = true }
jmi-enrichment = { workspace = true }
jmi-flows = { workspace = true }
jmi-app = { workspace = true }

# --- Tooling -----------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["dbt"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by the formatter

[tool.ruff.lint.isort]
known-first-party = ["jmi_core", "jmi_scrapers", "jmi_enrichment", "jmi_flows"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
exclude = ["dbt/", "build/"]

[tool.pytest.ini_options]
testpaths = ["libs", "scrapers", "enrichment", "orchestration", "app"]
addopts = "-q"
