[project]
name = "jmi-app"
version = "0.1.0"
description = "Streamlit analytical app + text-to-SQL agent over the MotherDuck marts"
requires-python = ">=3.11"
dependencies = [
    "jmi-core",
    "jmi-enrichment",
    "streamlit>=1.38",
    "pandas>=2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["streamlit_app"]
