[project]
name = "jmi-enrichment"
version = "0.1.0"
description = "Pluggable LLM classification (Ollama/Gemini/Anthropic), salary parsing, dedup"
requires-python = ">=3.11"
dependencies = [
    "jmi-core",
    "httpx>=0.27",  # Ollama + Gemini providers
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]  # only for the paid provider

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jmi_enrichment"]
