[project]
name = "jmi-flows"
version = "0.1.0"
description = "Prefect orchestration: ingestion and LLM enrichment flows"
requires-python = ">=3.11"
dependencies = [
    "jmi-core",
    "jmi-scrapers",
    "jmi-enrichment",
    "prefect>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jmi_flows"]
