[project]
name = "jmi-scrapers"
version = "0.1.0"
description = "httpx-based scrapers (free public APIs) emitting canonical JobPosting records"
requires-python = ">=3.11"
dependencies = [
    "jmi-core",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Improvement-section sources (LinkedIn/Indeed via anti-bot proxy).
scrapfly = ["scrapfly-sdk>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jmi_scrapers"]
