[project]
name = "jmi-core"
version = "0.1.0"
description = "Shared contracts, settings, logging, and warehouse client for the JMI Engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "duckdb>=1.1",
    "structlog>=24.4",
    "langdetect>=1.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jmi_core"]
